@@ -1,107 +1,0 @@
-The format of treasures has changed since r1410 to make them quest-dependent.
-Now, the inventory items, the equipment items, the quest status items, the dungeon items,
-the treasures, the chests, the shop items and the pickable items
-are all described in a data file instead of being hardcoded.
-This allows each quest to create its own items.
-
-However, the data files of maps needs to be updated because the syntax of
-chests, shop items, pickable items, destructible items and enemies has changed.
-
-
-This section gives for each Treasure::Content value of the old system
-the corresponding equipment item name and variant number in the new system.
-It can be used to update (manually or automatically with a shell-script)
-the treasures, chests and shop items in data files of the old system.
-
-old_treasure_content		treasure_name		treasure_variant
-
--1	_none	0
-0	feather	1
-2	bow	1
-3	quiver	1
-4	boomerang	1
-5	lamp	1
-6	hookshot	1
-7	bottle_1	1
-13	pegasus_shoes	1
-14	mystic_mirror	1
-15	cane_of_somaria	1
-16	apples	1
-17	pains_au_chocolat	1
-18	croissants	1
-19	rock_key	1
-20	red_key	1
-21	clay_key	1
-22	level_4_way_bone_key	1
-23	level_4_way_bone_key	2
-24	level_4_way_bone_key	3
-25	level_4_way_bone_key	4
-26	flippers	1
-27	magic_cape	1
-28	iron_key	1
-29	stone_key	1
-30	wooden_key	1
-31	ice_key	1
-32	glove	1
-33	glove	2
-34	fire_stone	1
-50	world_map	1
-52	rupee_bag	2
-53	rupee_bag	3
-54	bomb_bag	1
-55	bomb_bag	2
-56	bomb_bag	3
-58	quiver	2
-59	quiver	3
-61	tunic	2
-62	tunic	3
-63	shield	1
-64	shield	2
-65	shield	3
-66	sword	1
-67	sword	2
-68	sword	3
-69	sword	4
-70	map	1
-71	compass	1
-72	small_key	1
-73	big_key	1
-74	boss_key	1
-79	piece_of_heart	1
-80	heart_container	1
-82	bomb	1
-83	arrow	1
-84	heart	1
-85	magic_flask	1
-86	magic_flask	2	
-87	rupee	1
-88	rupee	2
-89	rupee	3
-
-This section gives, for each pickable item subtype of the old system,
-the corresponding new item and variant.
-Pickable items, enemies and destructible items need to be updated.
-
-old_pickable_item_subtype	treasure_name	treasure_variant
-
--1	_random	0
-0	_none	0
-1	rupee	1
-2	rupee	2
-3	rupee	3
-4	heart	1
-5	magic_flask	1
-6	magic_flask	2
-7	fairy	1
-8	bomb	1
-9	bomb	2
-10	bomb	3
-11	arrow	1
-12	arrow	2
-13	arrow	3
-14	small_key	1
-15	big_key	1
-16	boss_key	1
-17	piece_of_heart	1
-18	heart_container	1
-
