@@ -1,5 +1,9 @@
 This ChangeLog describes the important changes of each svn commit.
 
+r1435 (2010-09-05):
+
+Still fixing items.
+
 r1434 (2010-09-04):
 
 Fix item issues.
